change page to site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </section>
     </main>
     <script>
-     document.body.innerText = 'disable javascript to view this page'
+     document.body.innerText = 'disable javascript to view this site'
     </script>
   </body>
 </html>
